--- a/quem-somos.html
+++ b/quem-somos.html
@@ -7,6 +7,7 @@
 
         <h1>Quem somos</h1>
         <p> A empresa  possui 15 anos de mercado </p>
+        <p>Nossos servicos possuem certificacao ISO</p>
 
 
 
